--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "start": "node server/index.js"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +18,9 @@
   },
   "dependencies": {
     "esbuild": "^0.25.2",
+    "express": "^5.1.0",
     "nanoid": "^3.3.11",
+    "node-fetch": "^3.3.2",
     "picocolors": "^1.1.1",
     "postcss": "^8.5.3",
     "rollup": "^4.39.0",
