--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "1.0.0",
   "description": "Car Comparison for Final Project",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "start": "node server/index.js"
+    "start": "node server.js",
+    "prestart": "npm run build"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +21,7 @@
   "dependencies": {
     "esbuild": "^0.25.2",
     "express": "^5.1.0",
+    "http-proxy-middleware": "^3.0.5",
     "nanoid": "^3.3.11",
     "node-fetch": "^3.3.2",
     "picocolors": "^1.1.1",
