--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^5.1.0",
     "http-proxy-middleware": "^3.0.5",
     "nanoid": "^3.3.11",
+    "node-fetch": "^3.3.2",
     "picocolors": "^1.1.1",
     "postcss": "^8.5.3",
     "rollup": "^4.39.0",
