--- a/backend/package.json
+++ b/backend/package.json
@@ -10,13 +10,14 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
+    "axios": "^1.8.4",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "node-fetch": "^3.3.2"
   },
   "engines": {
     "node": "18.x"
-  }
+  },
+  "description": ""
 }
