--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "description": "Car Comparison for Final Project",
   "main": "index.js",
-  "type": "module",
+
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "start": "node server.js",
+    "start": "node server.cjs",
     "prestart": "npm run build"
   },
   "keywords": [],
