--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vite": "^6.2.5"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "esbuild": "^0.25.2",
     "express": "^5.1.0",
     "http-proxy-middleware": "^3.0.5",
