--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview",
-    "start": "node index.js",
+    "preview": "vite preview",
+    "start": "node server/index.js",
     "prestart": "npm run build"
   },
   "keywords": [],
